Fixes paragraph alignment for legends

--- a/style/less/site.less
+++ b/style/less/site.less
@@ -61,6 +61,7 @@ legend {
     margin-bottom: 25px;
     font-size: 12px;
     font-weight: 100;
+    text-align: left;
   }
 }
 
